# micromamba.mk

./: LICENSE  README.md  micromamba.mk
example/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  environment.yml  micromamba.mk  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg
example/tests/: test_version.py
