[project]
name = "example"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "covdefaults",
    "coverage",
    "ipdb",
    "mypy",
    "pre-commit",
    "pytest",
    "python-lsp-server",
    "requests",
    "ruff",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
