[metadata]
name = myapp
version = attr: src._version.__version__

[options]
packages = find:
install_requires =
    requests

[options.extras_require]
dev =
    pytest
    coverage
    covdefaults
    pre-commit
    black
    ruff
    mypy
    ipdb
    python-lsp-server

[options.packages.find]
exclude =
    tests*

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
# ignore_missing_imports = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
